k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyletter-tracking-tool
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - easyletter-tracking-tool.k8s.postcon.net
      secretName: easyletter-tracking-tool-prod-tls
  rules:
    - host: easyletter-tracking-tool.k8s.postcon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyletter-tracking-tool
                port:
                  number: 80
